--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>PokeCards!</title>
   </head>
   <body>
-    <div id="root"></div>
+    <main id="root"></main>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
